# tanssi-test-v0.6.3

./: .gitignore  Cargo.toml
container-chains/templates/simple/runtime/: Cargo.toml
container-chains/templates/simple/runtime/src/: lib.rs
pallets/lottery-example/: Cargo.toml
pallets/lottery-example/src/: lib.rs
